--- a/enlaces.html
+++ b/enlaces.html
@@ -160,6 +160,106 @@
             backdrop-filter: blur(12px);
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
         }
+
+        /* ========== ILLUMINATED ISLAND NAVIGATION ========== */
+        .nav-island {
+            position: fixed;
+            top: 1.5rem;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 50;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            background: rgba(255, 255, 255, 0.75);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            border-radius: 2rem;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
+        }
+
+        .nav-segment {
+            position: relative;
+            padding: 0.625rem 1.25rem;
+            font-size: 0.875rem;
+            font-weight: 500;
+            color: hsl(var(--foreground) / 0.7);
+            text-decoration: none;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 1rem;
+            border: 1px solid transparent;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            letter-spacing: 0.02em;
+            white-space: nowrap;
+        }
+
+        .nav-segment:hover {
+            color: hsl(var(--primary));
+            background: rgba(255, 255, 255, 0.25);
+            border-color: rgba(6, 132, 212, 0.2);
+            box-shadow: 0 0 20px rgba(6, 132, 212, 0.4),
+                0 0 40px rgba(6, 132, 212, 0.2);
+        }
+
+        .nav-segment.active {
+            color: hsl(var(--primary));
+            background: rgba(6, 132, 212, 0.15);
+            border-color: rgba(6, 132, 212, 0.3);
+            font-weight: 600;
+            box-shadow: 0 0 30px rgba(6, 132, 212, 0.6),
+                0 0 50px rgba(6, 132, 212, 0.3),
+                inset 0 0 20px rgba(6, 132, 212, 0.1);
+        }
+
+        .search-island {
+            position: relative;
+            display: flex;
+            align-items: center;
+            margin-left: 0.5rem;
+        }
+
+        .search-island input {
+            width: 12rem;
+            height: 2.5rem;
+            padding: 0 1rem 0 2.5rem;
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 1.25rem;
+            font-size: 0.875rem;
+            color: hsl(var(--foreground));
+            outline: none;
+            transition: all 0.3s ease;
+        }
+
+        .search-island input::placeholder {
+            color: hsl(var(--foreground) / 0.5);
+        }
+
+        .search-island input:focus {
+            background: rgba(255, 255, 255, 0.35);
+            border-color: rgba(6, 132, 212, 0.3);
+            box-shadow: 0 0 15px rgba(6, 132, 212, 0.3);
+        }
+
+        .search-island svg {
+            position: absolute;
+            left: 0.75rem;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 16px;
+            height: 16px;
+            color: hsl(var(--foreground) / 0.5);
+            pointer-events: none;
+        }
+
+        /* Hide desktop island on mobile */
+        @media (max-width: 768px) {
+            .nav-island {
+                display: none;
+            }
+        }
     </style>
 
     <!-- Tailwind Config -->
@@ -205,53 +305,32 @@
     <!-- Background Illustration -->
     <div class="container-illustration"></div>
 
-    <!-- Header -->
-    <header class="sticky top-0 z-50 w-full border-b border-border/40 bg-background/95 backdrop-blur">
-        <div class="container mx-auto flex h-16 max-w-7xl items-center justify-center px-4 sm:px-6 lg:px-8">
-            <!-- Desktop Navigation -->
-            <div class="hidden items-center gap-1 md:flex">
-                <nav class="flex items-center gap-1 text-sm font-medium">
-                    <a href="index.html" class="nav-link">
-                        INTRODUCCIÓN
-                    </a>
-                    <a href="temario.html" class="nav-link">
-                        TEMARIO
-                    </a>
-                    <a href="fuentes-de-datos.html" class="nav-link">
-                        FUENTES DE DATOS
-                    </a>
-                    <a href="enlaces.html" class="nav-link active">
-                        ENLACES DE INTERÉS
-                    </a>
-                    <a href="sobre-mi.html" class="nav-link">
-                        SOBRE MÍ
-                    </a>
-                </nav>
-                <div class="relative ml-4">
-                    <svg class="absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-muted-foreground"
-                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg>
-                    <input type="search" placeholder="Buscar en temario..."
-                        class="h-11 w-48 rounded-md bg-secondary pl-9 pr-3 text-sm outline-none ring-ring focus:ring-2"
-                        id="headerSearch">
-                </div>
-            </div>
+    <!-- Illuminated Island Navigation (Desktop) -->
+    <nav class="nav-island hidden md:flex">
+        <a href="index.html" class="nav-segment">INTRODUCCIÓN</a>
+        <a href="temario.html" class="nav-segment">TEMARIO</a>
+        <a href="fuentes-de-datos.html" class="nav-segment">FUENTES DE DATOS</a>
+        <a href="enlaces.html" class="nav-segment active">ENLACES</a>
+        <a href="sobre-mi.html" class="nav-segment">SOBRE MÍ</a>
 
-            <!-- Mobile Menu Button -->
-            <div class="absolute right-4 md:hidden">
-                <button onclick="toggleMobileMenu()" class="p-2 text-foreground hover:text-primary"
-                    aria-label="Abrir menú">
-                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
-                </button>
-            </div>
+        <div class="search-island">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+            <input type="search" placeholder="Buscar en temario..." id="headerSearch">
         </div>
-    </header>
+    </nav>
+
+    <!-- Mobile Menu Button (Floating) -->
+    <button
+        class="md:hidden fixed top-4 right-4 z-50 p-3 min-w-[44px] min-h-[44px] flex items-center justify-center bg-white/80 backdrop-blur-md rounded-full border border-white/40 shadow-lg"
+        onclick="toggleMobileMenu()" aria-label="Abrir menú">
+        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor" class="text-primary">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+    </button>
 
     <!-- Mobile Menu -->
     <div id="mobileMenu"
@@ -302,14 +381,15 @@
     <!-- Main Content -->
     <main class="relative flex-1 pb-24 pt-16">
         <!-- Enlaces de Interés Section -->
-        <section class="w-full py-8 md:py-12">
-            <div class="container mx-auto max-w-7xl px-4 md:px-6">
+        <section class="w-full py-16 md:py-24">
+            <div class="container mx-auto max-w-6xl px-4 md:px-6">
                 <!-- Header -->
                 <div class="mb-12 text-center">
-                    <h1 class="text-4xl font-extrabold tracking-tighter text-primary sm:text-5xl md:text-6xl mb-4">
+                    <h1
+                        class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-extrabold tracking-tight text-primary mb-4">
                         ENLACES DE INTERÉS
                     </h1>
-                    <p class="mx-auto max-w-[700px] font-serif text-muted-foreground md:text-lg">
+                    <p class="mx-auto max-w-[700px] font-serif text-muted-foreground text-base md:text-lg">
                         Recursos y enlaces de utilidad para la preparación de las oposiciones del SOIVRE
                     </p>
                 </div>
@@ -319,7 +399,7 @@
 
                     <!-- Box 1: ESTADÍSTICAS DE COMERCIO EXTERIOR -->
                     <div
-                        class="flex flex-col h-full bg-white/70 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
+                        class="flex flex-col h-full bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
                         <h2
                             class="text-xl font-bold text-primary mb-6 border-b-2 border-primary/30 pb-3 tracking-tight">
                             ESTADÍSTICAS DE COMERCIO EXTERIOR
@@ -388,7 +468,7 @@
 
                     <!-- Box 2: ENLACES GENERALES -->
                     <div
-                        class="flex flex-col h-full bg-white/70 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
+                        class="flex flex-col h-full bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
                         <h2
                             class="text-lg font-bold text-primary mb-6 border-b-2 border-primary/30 pb-3 tracking-tight leading-tight">
                             ENLACES GENERALES
@@ -467,7 +547,7 @@
 
                     <!-- Box 3: RELACIONES COMERCIALES -->
                     <div
-                        class="flex flex-col h-full bg-white/70 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
+                        class="flex flex-col h-full bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
                         <h2
                             class="text-xl font-bold text-primary mb-6 border-b-2 border-primary/30 pb-3 tracking-tight">
                             RELACIONES COMERCIALES
@@ -501,7 +581,7 @@
 
                     <!-- Box 4: ORGANISMOS INTERGUBERNAMENTALES -->
                     <div
-                        class="flex flex-col h-full bg-white/70 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
+                        class="flex flex-col h-full bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
                         <h2
                             class="text-lg font-bold text-primary mb-6 border-b-2 border-primary/30 pb-3 tracking-tight leading-tight">
                             ORGANISMOS INTERGUBERNAMENTALES
