--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -148,6 +148,106 @@
             backdrop-filter: blur(12px);
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
         }
+
+        /* ========== ILLUMINATED ISLAND NAVIGATION ========== */
+        .nav-island {
+            position: fixed;
+            top: 1.5rem;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 50;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            background: rgba(255, 255, 255, 0.75);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            border-radius: 2rem;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
+        }
+
+        .nav-segment {
+            position: relative;
+            padding: 0.625rem 1.25rem;
+            font-size: 0.875rem;
+            font-weight: 500;
+            color: hsl(var(--foreground) / 0.7);
+            text-decoration: none;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 1rem;
+            border: 1px solid transparent;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            letter-spacing: 0.02em;
+            white-space: nowrap;
+        }
+
+        .nav-segment:hover {
+            color: hsl(var(--primary));
+            background: rgba(255, 255, 255, 0.25);
+            border-color: rgba(6, 132, 212, 0.2);
+            box-shadow: 0 0 20px rgba(6, 132, 212, 0.4),
+                0 0 40px rgba(6, 132, 212, 0.2);
+        }
+
+        .nav-segment.active {
+            color: hsl(var(--primary));
+            background: rgba(6, 132, 212, 0.15);
+            border-color: rgba(6, 132, 212, 0.3);
+            font-weight: 600;
+            box-shadow: 0 0 30px rgba(6, 132, 212, 0.6),
+                0 0 50px rgba(6, 132, 212, 0.3),
+                inset 0 0 20px rgba(6, 132, 212, 0.1);
+        }
+
+        .search-island {
+            position: relative;
+            display: flex;
+            align-items: center;
+            margin-left: 0.5rem;
+        }
+
+        .search-island input {
+            width: 12rem;
+            height: 2.5rem;
+            padding: 0 1rem 0 2.5rem;
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 1.25rem;
+            font-size: 0.875rem;
+            color: hsl(var(--foreground));
+            outline: none;
+            transition: all 0.3s ease;
+        }
+
+        .search-island input::placeholder {
+            color: hsl(var(--foreground) / 0.5);
+        }
+
+        .search-island input:focus {
+            background: rgba(255, 255, 255, 0.35);
+            border-color: rgba(6, 132, 212, 0.3);
+            box-shadow: 0 0 15px rgba(6, 132, 212, 0.3);
+        }
+
+        .search-island svg {
+            position: absolute;
+            left: 0.75rem;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 16px;
+            height: 16px;
+            color: hsl(var(--foreground) / 0.5);
+            pointer-events: none;
+        }
+
+        /* Hide desktop island on mobile */
+        @media (max-width: 768px) {
+            .nav-island {
+                display: none;
+            }
+        }
     </style>
 
     <!-- Tailwind Config -->
@@ -193,54 +293,32 @@
     <!-- Background Illustration -->
     <div class="container-illustration"></div>
 
-    <!-- Header -->
-    <header class="sticky top-0 z-50 w-full border-b border-border/40 bg-background/95 backdrop-blur">
-        <div class="container mx-auto flex h-16 max-w-7xl items-center justify-center px-4 sm:px-6 lg:px-8">
-            <!-- Desktop Navigation -->
-            <div class="hidden items-center gap-1 md:flex">
-                <nav class="flex items-center gap-1 text-sm font-medium">
-                    <a href="index.html" class="nav-link">
-                        INTRODUCCIÓN
-                    </a>
-                    <a href="temario.html" class="nav-link">
-                        TEMARIO
-                    </a>
-                    <a href="fuentes-de-datos.html" class="nav-link">
-                        FUENTES DE DATOS
-                    </a>
-                    <a href="enlaces.html" class="nav-link">
-                        ENLACES DE INTERÉS
-                    </a>
-                    <a href="sobre-mi.html" class="nav-link active">
-                        SOBRE MÍ
-                    </a>
-                </nav>
-                <div class="relative ml-4">
-                    <svg class="absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-muted-foreground"
-                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg>
-                    <input type="search" placeholder="Buscar en temario..."
-                        class="h-11 w-48 rounded-md bg-secondary pl-9 pr-3 text-sm outline-none ring-ring focus:ring-2"
-                        id="headerSearch">
-                </div>
-            </div>
+    <!-- Illuminated Island Navigation (Desktop) -->
+    <nav class="nav-island hidden md:flex">
+        <a href="index.html" class="nav-segment">INTRODUCCIÓN</a>
+        <a href="temario.html" class="nav-segment">TEMARIO</a>
+        <a href="fuentes-de-datos.html" class="nav-segment">FUENTES DE DATOS</a>
+        <a href="enlaces.html" class="nav-segment">ENLACES</a>
+        <a href="sobre-mi.html" class="nav-segment active">SOBRE MÍ</a>
 
-            <!-- Mobile Menu Button - 44px Touch Target -->
-            <div class="absolute right-4 md:hidden">
-                <button onclick="toggleMobileMenu()"
-                    class="p-3 min-w-[44px] min-h-[44px] flex items-center justify-center text-foreground hover:text-primary active:scale-95 transition-all"
-                    aria-label="Abrir menú">
-                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
-                </button>
-            </div>
+        <div class="search-island">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+            <input type="search" placeholder="Buscar en temario..." id="headerSearch">
         </div>
-    </header>
+    </nav>
+
+    <!-- Mobile Menu Button (Floating) -->
+    <button
+        class="md:hidden fixed top-4 right-4 z-50 p-3 min-w-[44px] min-h-[44px] flex items-center justify-center bg-white/80 backdrop-blur-md rounded-full border border-white/40 shadow-lg"
+        onclick="toggleMobileMenu()" aria-label="Abrir menú">
+        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor" class="text-primary">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+    </button>
 
     <!-- Mobile Menu -->
     <div id="mobileMenu"
@@ -292,46 +370,50 @@
     <main class="relative flex-1 pb-24">
         <!-- Sobre Mí Section -->
         <section class="flex min-h-screen w-full items-center justify-center py-16">
-            <div class="container mx-auto max-w-4xl px-4 md:px-6">
+            <div class="container mx-auto max-w-6xl px-4 md:px-6">
                 <div
-                    class="rounded-3xl bg-white/70 backdrop-blur-md border border-white/30 p-10 md:p-16 shadow-2xl transition-all duration-300 hover:shadow-[0_0_50px_rgba(6,182,212,0.2)]">
+                    class="bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl shadow-2xl p-8 md:p-12 min-h-[75vh] transition-all duration-300 hover:shadow-[0_0_50px_rgba(6,182,212,0.2)]">
                     <!-- Profile Header -->
-                    <div class="text-center mb-12">
-                        <h1 class="text-5xl md:text-6xl font-extrabold tracking-tight text-primary mb-8">
+                    <div class="text-center mb-20">
+                        <h1
+                            class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tight text-primary mb-10">
                             Sergio Argudo Santiago
                         </h1>
 
                         <!-- Professional Titles -->
-                        <div class="space-y-4 mb-10">
+                        <div class="space-y-8 mb-16">
                             <div class="flex items-center justify-center gap-3">
-                                <p class="text-xl md:text-2xl font-semibold text-foreground">
+                                <p class="text-2xl md:text-3xl lg:text-4xl font-bold text-foreground">
                                     Inspector del SOIVRE (Promoción 2025)
                                 </p>
                             </div>
                             <div class="flex items-center justify-center gap-3">
-                                <p class="text-xl md:text-2xl font-semibold text-foreground">
+                                <p class="text-2xl md:text-3xl lg:text-4xl font-bold text-foreground">
                                     Ingeniero Técnico del SOIVRE (Promoción 2023)
                                 </p>
                             </div>
                         </div>
 
                         <!-- Divider -->
-                        <div class="w-32 h-1.5 bg-gradient-to-r from-primary to-accent mx-auto mb-10 rounded-full">
+                        <div class="w-48 h-2.5 bg-gradient-to-r from-primary to-accent mx-auto mb-16 rounded-full">
                         </div>
 
                         <!-- Education -->
-                        <div class="space-y-6">
-                            <h2 class="text-3xl font-bold text-primary mb-6 tracking-tight">Formación Académica</h2>
-                            <div class="space-y-4">
+                        <div class="space-y-10">
+                            <h2 class="text-4xl md:text-5xl font-extrabold text-primary mb-8 tracking-tight">Formación
+                                Académica</h2>
+                            <div class="space-y-6">
                                 <div
-                                    class="flex items-start gap-4 text-left max-w-2xl mx-auto bg-white/50 backdrop-blur-sm rounded-2xl p-5 border border-white/40">
-                                    <p class="font-serif text-foreground/80 leading-relaxed text-lg">
+                                    class="flex items-start gap-4 text-left max-w-2xl mx-auto bg-white/50 backdrop-blur-sm rounded-2xl p-6 md:p-8 border border-white/40">
+                                    <p
+                                        class="font-serif text-foreground/80 leading-relaxed text-lg md:text-xl lg:text-2xl">
                                         Ingeniero Químico por la Universidad Complutense de Madrid
                                     </p>
                                 </div>
                                 <div
-                                    class="flex items-start gap-4 text-left max-w-2xl mx-auto bg-white/50 backdrop-blur-sm rounded-2xl p-5 border border-white/40">
-                                    <p class="font-serif text-foreground/80 leading-relaxed text-lg">
+                                    class="flex items-start gap-4 text-left max-w-2xl mx-auto bg-white/50 backdrop-blur-sm rounded-2xl p-6 md:p-8 border border-white/40">
+                                    <p
+                                        class="font-serif text-foreground/80 leading-relaxed text-lg md:text-xl lg:text-2xl">
                                         Máster en Ingeniería Química por la Universidad Autónoma de Madrid y Universidad
                                         Rey Juan Carlos
                                     </p>
@@ -340,9 +422,9 @@
                         </div>
 
                         <!-- Contact Button -->
-                        <div class="mt-12">
+                        <div class="mt-16">
                             <a href="mailto:sergio.argudo.santiago@example.com"
-                                class="inline-flex items-center gap-3 rounded-2xl bg-primary px-10 py-4 text-lg font-semibold text-primary-foreground shadow-xl transition-all duration-300 hover:bg-primary/90 hover:shadow-[0_0_30px_rgba(6,182,212,0.5)] hover:scale-105">
+                                class="inline-flex items-center gap-3 rounded-2xl bg-primary px-14 py-6 text-2xl font-bold text-primary-foreground shadow-xl transition-all duration-300 hover:bg-primary/90 hover:shadow-[0_0_30px_rgba(6,182,212,0.5)] hover:scale-105">
                                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
