--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -297,7 +297,7 @@
     <nav class="nav-island hidden md:flex">
         <a href="index.html" class="nav-segment">INTRODUCCIÓN</a>
         <a href="temario.html" class="nav-segment">TEMARIO</a>
-        <a href="fuentes-de-datos.html" class="nav-segment">FUENTES DE DATOS</a>
+        <a href="comercio-exterior.html" class="nav-segment">COMERCIO EXTERIOR</a>
         <a href="enlaces.html" class="nav-segment">ENLACES</a>
         <a href="sobre-mi.html" class="nav-segment active">SOBRE MÍ</a>
 
@@ -338,9 +338,9 @@
                     class="w-full justify-start rounded-md p-2 text-left text-foreground/80 hover:bg-accent">
                     TEMARIO
                 </a>
-                <a href="fuentes-de-datos.html" onclick="toggleMobileMenu();"
+                <a href="comercio-exterior.html" onclick="toggleMobileMenu();"
                     class="w-full justify-start rounded-md p-2 text-left text-foreground/80 hover:bg-accent">
-                    FUENTES DE DATOS
+                    COMERCIO EXTERIOR
                 </a>
                 <a href="enlaces.html" onclick="toggleMobileMenu();"
                     class="w-full justify-start rounded-md p-2 text-left text-foreground/80 hover:bg-accent">
