--- a/enlaces.html
+++ b/enlaces.html
@@ -583,7 +583,7 @@
                     <div
                         class="flex flex-col h-full bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl p-8 shadow-xl transition-all duration-300 hover:shadow-[0_0_40px_rgba(6,182,212,0.3)] hover:bg-white/80 hover:-translate-y-1">
                         <h2
-                            class="text-lg font-bold text-primary mb-6 border-b-2 border-primary/30 pb-3 tracking-tight leading-tight">
+                            class="text-base font-bold text-primary mb-6 border-b-2 border-primary/30 pb-3 tracking-tight leading-tight">
                             ORGANISMOS INTERGUBERNAMENTALES
                         </h2>
                         <div class="flex flex-col space-y-3 flex-grow">
