--- a/temario.html
+++ b/temario.html
@@ -581,8 +581,9 @@
                             </div>
                         </div>
 
-                        <!-- Exercise 2 Card -->
-                        <a href="/temario/ejercicio-2" class="group block h-full">
+                        <!-- Exercise 2 Card (Blocked) -->
+                        <div class="group block h-full cursor-pointer"
+                            onclick="openModal('coming-soon', 'SEGUNDO EJERCICIO')">
                             <div
                                 class="flex h-full flex-col rounded-lg border bg-background/50 p-6 transition-all duration-300 group-hover:border-primary group-hover:shadow-lg group-hover:scale-[1.02]">
                                 <h3 class="text-xl font-bold text-primary mb-4">SEGUNDO EJERCICIO</h3>
@@ -591,7 +592,8 @@
                                         realizarse de forma optativa en otros idiomas.</p>
                                 </div>
                             </div>
-                        </a>
+                        </div>
+
 
                         <!-- Exercise 3 Card -->
                         <div class="group block h-full cursor-pointer"
