--- a/temario.html
+++ b/temario.html
@@ -567,7 +567,7 @@
                     <div class="mx-auto mt-12 grid max-w-7xl grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3">
                         <!-- Exercise 1 Card -->
                         <div class="group block h-full cursor-pointer"
-                            onclick="openModal('coming-soon', 'PRIMER EJERCICIO')">
+                            onclick="openModal('topic-list', 'PRIMER EJERCICIO', 1, 55)">
                             <div
                                 class="flex h-full flex-col rounded-lg border bg-background/50 p-6 transition-all duration-300 group-hover:border-primary group-hover:shadow-lg group-hover:scale-[1.02]">
                                 <h3 class="text-xl font-bold text-primary mb-4">PRIMER EJERCICIO</h3>
@@ -580,6 +580,7 @@
                                 </div>
                             </div>
                         </div>
+
 
                         <!-- Exercise 2 Card (Blocked) -->
                         <div class="group block h-full cursor-pointer"
